修改词条过滤正则

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "eslint.options": {
-        "configFile": "./.eslintrc.js",
-    },
-    "editor.tabSize": 4
+  "eslint.options": {
+    "configFile": "./.eslintrc.js"
+  },
+  "editor.tabSize": 4,
+  "prettier.printWidth": 80
 }
